
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buff ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int bzero (char*,int) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int printf (char*) ;
 int read (int,char*,int) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 int stderr ;
 int write (int,char*,int) ;

void
runshell (int sockd)
{
  char buff[1024];
  int ret;
  fd_set fds;

  printf("\nPress CTRL_C to exit the shell!\n");
  for (;;)
    {

      FD_ZERO (&fds);
      FD_SET (0, &fds);
      FD_SET (sockd, &fds);

      if (select (sockd + 1, &fds, ((void*)0), ((void*)0), ((void*)0)) < 0)
        {
          exit (-1);
        }

      if (FD_ISSET (sockd, &fds))
        {
          bzero (buff, sizeof buff);
           if ((ret=read(sockd,buff,sizeof(buff)))<1)
            {
              fprintf (stderr, "Connection closed\n");
              exit (-1);
            }
          write(1,buff,ret);
        }

      if (FD_ISSET (0, &fds))
        {
          bzero (buff, sizeof buff);
          ret=read(0,buff,sizeof(buff));
          write(sockd,buff,ret);
        }
    }
}
